# engine-kernel

./: Cargo.toml  README.md  app_core-7422325886da09cb.js  index.html  justfile
src/: lib.rs  main.rs
src/shaders/: auto_exposure.wgsl  blur.wgsl  brdf_lut.wgsl  bright.wgsl  cluster_assign.wgsl  cluster_bounds.wgsl  composite.wgsl  cubemap_mipgen.wgsl  equirect_to_cube.wgsl  filter_envmap.wgsl  fullscreen.wgsl  fxaa.wgsl  hiz_copy.wgsl  hiz_downsample.wgsl  ibl_common.wgsl  irradiance.wgsl  mesh.wgsl  mesh_cull.wgsl  mesh_cull_unified.wgsl  mesh_indirect_build.wgsl  mesh_indirect_compact.wgsl  point_shadow.wgsl  prefilter.wgsl  shadow.wgsl  skin_compute.wgsl  skinned_cull.wgsl  sky.wgsl  ssao.wgsl  ssao_blur.wgsl  ssr.wgsl  ssr_blur.wgsl
