[package]
name = "app_core"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.34"
egui-wgpu = { version = "0.34", features = ["winit"] }
futures = "0.3.32"
log = "0.4.29"
nalgebra-glm = { version = "0.20.0", features = ["convert-bytemuck"] }
web-time = "1.1.0"
wgpu = { version = "29", default-features = false }
winit = "0.30.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.10"
egui-winit = "0.34"
pollster = "0.4.0"
gltf = "1.4"
ureq = "2"
image = { version = "0.25", features = ["hdr"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.34", default-features = false }
wasm-bindgen = "0.2.115"
wasm-bindgen-futures = "0.4.65"

[features]
default = ["wgpu/default"]
webgpu = ["wgpu/webgpu"]

# For very small final binary size,
# uncomment the following release profile and build with it

[profile.release]
codegen-units = 1 # Reduce parallel code generation units
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size
lto = true        # Link time optimization
panic = "abort"   # On panic, abort immediately rather than unwinding. Don't use this if you want backtraces.

# Then compress the final executable further with:
# upx --best --lzma ./target/release/app
#
# Or on windows,
# upx --best --lzma ./target/release/app.exe
